# efficax-game

./: .gitignore
Efficax/Logs/: ApiUpdaterCheck.txt
Efficax/ProjectSettings/: ProjectSettings.asset
Efficax/UserSettings/: EditorUserSettings.asset
RustLNL/: LNLServer.cs  RustLNLServer.cs  RustLNLSession.cs
archive/: EntityOldest.cs  oldzone.rs
cereal/: GlobalUsings.cs  IOUtils.cs  Program.cs
efficax-serde/: Cargo.toml
efficax-serde/src/: main.rs  tabbed_reader.rs
efficax-server/: Cargo.toml
efficax-server/efficax-server/: Cargo.toml
efficax-server/efficax-server/src/: main.rs  utils.rs
efficax-server/efficax-server/src/network/: listener.rs  mod.rs  packet.rs  receiver.rs  sender.rs  sender_handle.rs
efficax-server/efficax-server/src/network/data/: chat.rs  constants.rs  entity_update.rs  enum_indicies.rs  impls.rs  input.rs  loadables.rs  mod.rs  tick_update.rs  traits.rs  types.rs
efficax-server/efficax-server/src/server/: constants.rs  handle.rs  message_handler.rs  mod.rs
efficax-server/efficax-server/src/server/state/: client_state.rs  mod.rs  net_in.rs  net_out.rs  physics.rs  utils.rs
efficax-server/efficax-server/src/server/state/net/: events.rs  mod.rs  net_events.rs  net_in.rs  net_out.rs
efficax-server/efficax-server/src/server/state/world/: mod.rs
efficax-server/efficax-utils/: Cargo.toml
efficax-server/metaitus/: Cargo.toml
efficax-server/src/: main.rs  network.rs  server.rs  state.rs  utils.rs  world.rs
notes/: context.txt  metaitus.txt  todo.txt
schema/: main copy.mc  main.mc
schema/data/: chat.mc  init-udp.mc  (+2 more)
(+107 files in other folders)
